Fix the overflow error and reload to front.

--- a/web dev/customcss.css
+++ b/web dev/customcss.css
@@ -1,5 +1,6 @@
 /* to solve right space problem */
 
+html,
 body {
     overflow-y: auto;
     overflow-x: hidden;
